--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0",
+    "mongoose": "^8.6.3",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
   }
